<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvDetailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvDetailRented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rented" />

    <TextView
        android:id="@+id/tvDetailRentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rentDate" />

    <Button
        android:id="@+id/btnGenerateQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generateQRCode" />

    <Button
        android:id="@+id/btnEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editItem" />

    <Button
        android:id="@+id/btnDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteItem" />

</LinearLayout>
