<!-- activity_edit_item.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="392dp"
        android:layout_height="62dp"
        android:autofillHints="Enter name"
        android:hint="@string/itemName"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/checkBoxIsRented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isRented" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveChanges" />
</LinearLayout>