<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.MainActivity">


    <Button
        android:id="@+id/button_scan_qr"
        android:layout_width="412dp"
        android:layout_height="335dp"
        android:layout_marginTop="44dp"
        android:text="@string/scan_qr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_upload_photo"
        android:layout_width="401dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_scan_qr" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="31dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_upload_photo" />

    <EditText
        android:id="@+id/edittext_manual_entry"
        android:layout_width="372dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Enter id"
        android:hint="@string/enter_qr_code"
        android:inputType="text"
        app:layout_constrainedHeight="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/button_confirm_manual_entry"
        android:layout_width="326dp"
        android:layout_height="68dp"
        android:layout_marginTop="4dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_manual_entry" />


    <!-- Bottom Buttons Container -->
    <LinearLayout
        android:id="@+id/linearlayout_bottom_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Home Button -->
        <ImageButton
            android:id="@+id/btn_home_to_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/baseline_home_24"
            style="?android:attr/buttonBarButtonStyle"
            android:contentDescription="@string/Home" />

        <!-- Info Button -->
        <ImageButton
            android:id="@+id/btn_home_to_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/baseline_history_edu_24"
            style="?android:attr/buttonBarButtonStyle"
            android:contentDescription="@string/Info" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

