<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <!-- ID TextView -->
    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:text="@string/id"
        android:gravity="center" />

    <!-- Name TextView -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tvId"
        android:layout_centerVertical="true"
        android:layout_marginStart="34dp"
        android:text="@string/name"
        android:gravity="center" />

    <!-- Details Button -->
    <Button
        android:id="@+id/btnToDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:text="@string/details" />

</RelativeLayout>
